--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Pirates -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcc 'PS'
+- GITenberg
 title: 'Blackbeard: Buccaneer'
 url: http://www.gutenberg.org/ebooks/25472
